--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -1,7 +1,18 @@
 <!-- orderDetail.wxml -->
 <wxs module="dateFr" src='../../utils/filter.wxs'></wxs>
 <view class='container'>
-<view class='tips overtime' wx:if='{{order.orderStatus === 0}}'>
+  <view class='tips pending' wx:if='{{order.orderStatus === -1}}'>
+    <view class='title'>亲，请尽快付款</view>
+    <view class='subTitle'>支付剩余时间
+      <text>{{dateFr.secondToDate(count_down)}}</text> 请尽快支付</view>
+    <button class='pay'>立即付款{{order.payCurrency + (order.payPrice / 100)}}</button>
+    <button class='cancel_order' bindtap='handleClickOrderCancelButton'>取消订单</button>
+  </view>
+  <view class='tips overtime' wx:if='{{order.orderStatus === 99}}'>
+    <view class='title'>亲，您的订单已经超过支付时间，请重新下单</view>
+    <button class='shopping' bindtap='goToTheOrder'>再次购买</button>
+  </view>
+  <view class='tips overtime' wx:if='{{order.orderStatus === 0}}'>
     <view class='title'>亲，该订单已取消，可以选择再次购买</view>
     <button class='shopping' bindtap='goToTheOrder'>再次购买</button>
   </view>
@@ -53,7 +64,7 @@
   <view class='row' wx:if='{{receiver.addr}}'>
     <view class='text'>收货地址：{{receiver.addr}}</view>
   </view>
-  <view class='row'>
+  <view class='row' wx:if='{{false}}'>
     <view class='text flex'>
       <view>商品总价：</view>
       <view class='orange'>{{order.payCurrency + (order.sourcePrice / 100)}}</view>
@@ -65,7 +76,7 @@
   </view>
   <view class='row'>
     <view class='text flex'>
-      <view class='orange'>实付：{{order.payCurrency + (order.paidPrice / 100)}}</view>
+      <view class='orange'>实付：{{order.payCurrency + (order.payPrice / 100)}}</view>
     </view>
   </view>
   <view class='row' wx:if='{{order.orderStatus === 2}}'>
