--- a/pages/bookDetail/bookDetail.wxss
+++ b/pages/bookDetail/bookDetail.wxss
@@ -1,5 +1,67 @@
-.container{
+image {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 40rpx;
+  border-bottom: 1rpx solid #e0e0e0;
+}
+
+.header .text {
+  font-size: 36rpx;
+  line-height: 50rpx;
+  color: #b7b7b7;
+}
+
+.header .active {
+  color: #23c2f7;
+  font-weight: bold;
+}
+
+.header .arrow {
+  width: 40rpx;
+  height: 9rpx;
+  margin: 0 47rpx;
+}
+
+.result{
+  margin: 64rpx 0;
+}
+
+.result .title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.result .title .icon{
+  width: 52rpx;
+  height: 52rpx;
+  margin-right: 14rpx;
+}
+
+.result .title .text{
+  font-size: 56rpx;
+  line-height: 78rpx;
+  color: #23C2F7;
+}
+
+.result .subTitle{
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #666666;
+  text-align: center;
+  margin-top: 24rpx;
+}
+
+.row_inner{
+  width: 100%;
   padding: 0 40rpx;
+  box-sizing: border-box;
 }
 
 .container .row{
@@ -7,7 +69,7 @@
   padding: 40rpx;
   background-color: #23C2F7;
   border-radius: 15rpx;
-  margin-top: 74rpx;
+  margin: 40rpx auto;
   color: #fff;
   box-sizing: border-box;
 }
@@ -22,7 +84,7 @@
   text-align: center;
 }
 
-.title {
+.row .title {
   font-size: 48rpx;
   line-height: 67rpx;
   text-align: center;
@@ -91,7 +153,14 @@
 }
 
 .contact_info .mail{
-  margin-bottom: 56rpx;
+  margin-bottom: 0;
+}
+
+.order_explain_text{
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #fff;
+  margin: 56rpx 0 24rpx;
 }
 
 .order_explain{
@@ -125,6 +194,36 @@
   margin: 0;
   padding: 0;
   margin-top: 40rpx;
+}
+
+.merchecs{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 60rpx;
+  border-bottom: 1rpx dashed #fff; 
+  margin-bottom: 40rpx;
+}
+
+.merchecs .poster{
+  width: 112rpx;
+  height: 112rpx;
+  border-radius: 5rpx;
+  margin-right: 24rpx;
+  overflow: hidden;
+}
+
+.merchecs .info .name {
+  font-size: 36rpx;
+  line-height: 50rpx;
+  color: #fff;
+  margin-bottom: 16rpx;
+}
+
+.merchecs .info .price {
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #fff;
 }
 
 
