--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -235,6 +235,9 @@
   width: 32rpx;
   height: 32rpx;
   border-radius: 50%;
+}
+
+.pickUp .self_taking .radio_label .radio_border.active{
   border: 2rpx solid #23C2F7;
 }
 
@@ -242,6 +245,10 @@
   width: 20rpx;
   height: 20rpx;
   border-radius: 10rpx;
+  background-color: #E0E0E0;
+}
+
+.pickUp .self_taking .radio_label .radio_border.active .radio{
   background-color: #23C2F7;
 }
 
