--- a/pages/productList/productList.wxss
+++ b/pages/productList/productList.wxss
@@ -22,6 +22,7 @@
   display: flex;
   line-height: 0;
   padding: 0 40rpx;
+  box-sizing: border-box;
 }
 
 .tab-h .tab-item{
@@ -30,6 +31,19 @@
   position: relative;
   padding: 20rpx 0;
   margin-right: 60rpx;
+}
+
+.tab-h .tabs_show_type{
+  float: right;
+  width: 36rpx;
+  height: 36rpx;
+  margin-top: 22rpx;
+}
+
+.tab-h .tabs_show_type image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
 }
 
 .tab-h .tab-item .text{
@@ -58,19 +72,20 @@
 .scoll-h{
   width: 100%;
   height: 100%;
-  padding-top: 24rpx;
-  box-sizing: border-box;
-}
-
-.tab-content swiper-item{
+  /* padding-top: 24rpx; */
   padding: 0 40rpx;
   box-sizing: border-box;
 }
 
+.tab-content swiper-item{
+  /* padding: 0 40rpx; */
+  box-sizing: border-box;
+}
+
 .tab-content .header{
-  margin-top: 24rpx;
   display: flex;
   justify-content: space-between;
+  margin: 24rpx 40rpx;
 }
 
 .tab-content .header view{
@@ -90,17 +105,148 @@
   color: #23C2F7;
 }
 
+.tab-content .food_header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 24rpx 40rpx;
+  background-color: #fff;
+  border-bottom: 1rpx solid #e0e0e0;
+  box-sizing: border-box;
+}
+
+.tab-content .food_header>view{
+  display: flex;
+  align-items: center;
+}
+
+.tab-content .food_header>view .text{
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #8C8C8C;
+  margin-right: 16rpx;
+}
+
+.tab-content .food_header>view.active .text{
+  color: #23C2F7;
+}
+
+.tab-content .food_header>view .arrow{
+  width: 17rpx;
+  height: 11rpx;
+}
+
+.tab-content .food_header>view .arrow image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.tab-content .food_header>view .arrow .top{
+  display: none;
+}
+
+.tab-content .food_header>view.active .arrow .top{
+  display: block;
+}
+
+.tab-content .food_header>view.active .arrow .bottom{
+  display: none;
+}
+
+.tab-content .food_header>view .arrow .bottom{
+  display: block;
+}
+
+.tab-content .mask{
+  position: absolute;
+  top: 88rpx;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 8;
+}
+
+.tab-content .popup{
+  position: absolute;
+  left: 0;
+  top: 88rpx;
+  display: flex;
+  width: 100%;
+  height: 530rpx;
+  background-color: #fff;
+  z-index: 12;
+}
+
+.tab-content .popup .active{
+  color: #23C2F7 !important;
+}
+
+.tab-content .popup .region{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.tab-content .popup .region .left {
+  width: 242rpx;
+}
+
+.tab-content .popup .region .right{
+  flex: 1;
+}
+
+.tab-content .popup .region>view view{
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #3C3C3C;
+  padding: 20rpx 0 20rpx 40rpx;
+}
+
+.tab-content .popup .delicacy, .tab-content .popup .preference{
+  width: 280rpx;
+  height: 100%;
+  margin: 0 auto;
+  overflow-y: auto;
+}
+
+.tab-content .popup .delicacy view, .tab-content .popup .preference view{
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #3C3C3C;
+  padding: 20rpx 0;
+  text-align: center;
+}
+
 .tab-content .list_row{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  margin-bottom: 40rpx;
+  margin-top: 24rpx;
+  /* margin-bottom: 40rpx; */
 }
 
 .tab-content .list_row>view{
   width: 324rpx;
   margin-bottom: 40rpx;
+}
+
+.tab-content .list_row>view.horizontal{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 40rpx 0;
+  border-bottom: 1rpx solid #e0e0e0;
+}
+
+.tab-content .list_row>view.horizontal:last-of-type{
+  border-bottom: 0;
 }
 
 .tab-content .list_row>view>.img_row{
@@ -112,28 +258,64 @@
   margin-bottom: 24rpx;
 }
 
+.tab-content .list_row>view.horizontal>.img_row{
+  width: 218rpx;
+  min-width: 218rpx;
+  height: 218rpx;
+  margin: 0 24rpx 0 0;
+}
+
+.tab-content .list_row>view.horizontal .h_main{
+  width: 443rpx;
+}
+
 .tab-content .list_row>view>.img_row .bg{
   width: 100%;
   height: 100%;
+  vertical-align: top;
 }
 
-.tab-content .list_row>view>.img_row .top{
+.tab-content .list_row>view>.img_row .icon{
   position: absolute;
+  left: 0;
+  right: 0;
   bottom: 10rpx;
-  left: 10rpx;
-  width: 56rpx;
+  padding: 0 10rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.tab-content .list_row>view>.img_row .icon .icon_left{
+  display: flex;
+  align-items: center;
+}
+
+.tab-content .list_row>view>.img_row .icon .icon_left image{
+  width: 28rpx;
   height: 28rpx;
+  vertical-align: top;
 }
 
-.tab-content .list_row>view>.img_row .ticket{
-  position: absolute;
-  bottom: 10rpx;
-  right: 10rpx;
+.tab-content .list_row>view>.img_row .icon .icon_left image.top{
+  width: 56rpx;
+}
+
+.tab-content .list_row>view>.img_row .icon .icon_left image + image{
+  margin-left: 8rpx;
+}
+
+.tab-content .list_row>view>.img_row .icon .icon_right{
+  display: flex;
+}
+
+.tab-content .list_row>view>.img_row .icon .icon_right .ticket{
   width: 38rpx;
   height: 28rpx;
+  vertical-align: top;
 }
 
-.tab-content .list_row>view .title{
+.tab-content .list_row>view .title, .tab-content .list_row>view.horizontal .h_title{
   font-size: 32rpx;
   line-height: 42rpx;
   color: #3C3C3C;
@@ -143,27 +325,39 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 8rpx;
+  font-weight: normal;
 }
 
-.tab-content .list_row>view .location{
+.tab-content .list_row>view.horizontal .h_title{
+  height: 92rpx;
+  font-size: 36rpx;
+  line-height: 46rpx;
+  margin-bottom: 20rpx;
+}
+
+.tab-content .list_row>view .location, .tab-content .list_row>view.horizontal .h_location{
   display: flex;
   align-items: center;
   margin-bottom: 16rpx;
 }
 
-.tab-content .list_row>view .location .img_row{
+.tab-content .list_row>view.horizontal .h_location{
+  margin-bottom: 24rpx;
+}
+
+.tab-content .list_row>view .location .img_row, .tab-content .list_row>view.horizontal .h_location .img_row{
   width: 16rpx;
   height: 16rpx;
   margin-right: 13rpx;
 }
 
-.tab-content .list_row>view .location .img_row image{
+.tab-content .list_row>view .location .img_row image, .tab-content .list_row>view.horizontal .h_location .img_row image{
   width: 100%;
   height: 100%;
   vertical-align: top;
 }
 
-.tab-content .list_row>view .location .text{
+.tab-content .list_row>view .location .text, .tab-content .list_row>view.horizontal .h_location .text{
   font-size: 20rpx;
   line-height: 28rpx;
   color: #8C8C8C;
@@ -174,29 +368,70 @@
   align-items: center;
 }
 
-.tab-content .list_row>view .info .price{
+.tab-content .list_row>view .info .price, .tab-content .list_row>view.horizontal .h_price{
+  max-width: 200rpx;
   font-size: 32rpx;
-  line-height: 28rpx;
-  color: #D9333F;
+  line-height: 32rpx;
+  color: #d9333f;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.tab-content .list_row>view.horizontal .h_price{
+  max-width: 443rpx;
+}
+
+.tab-content .list_row>view .info .price .ashy, .tab-content .list_row>view.horizontal .h_price .ashy{
+  color: #999;
 }
 
 .tab-content .list_row>view .info .price text text{
   font-size: 20rpx;
 }
 
-.tab-content .list_row>view .info .star{
+.tab-content .list_row>view .info .star, .tab-content .list_row>view.horizontal .h_star{
   flex: 1;
   height: 14rpx;
   text-align: right;
 }
 
-.tab-content .list_row>view .info .star image{
+.tab-content .list_row>view.horizontal .h_star{
+  text-align: left;
+  margin-bottom: 12rpx;
+}
+
+.tab-content .list_row>view .info .star image, .tab-content .list_row>view.horizontal .h_star image{
   width: 14rpx;
   height: 14rpx;
   margin-right: 5rpx;
   vertical-align: top;
 }
 
-.tab-content .list_row>view .info .star image:last-of-type{
+.tab-content .list_row>view .info .star image:last-of-type, .tab-content .list_row>view.horizontal .h_star image:last-of-type{
   margin-right: 0;
+}
+
+.empty{
+  margin-top: 80rpx;
+}
+
+.empty .image_row{
+  width: 614rpx;
+  height: 380rpx;
+  margin: 0 auto 30rpx;
+}
+
+.empty .image_row image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.empty .text{
+  font-size: 32rpx;
+  line-height: 45rpx;
+  color: #8C8C8C;
+  letter-spacing: 3rpx;
+  text-align: center;
 }
